@@ -123,17 +123,25 @@ the broadcase address.) Eg: 192.168.1.0/24 => 192.168.2.0
 
 =item B<match>($ip)
 
-Returns TRUE if the IP number $ip matches the given network. That
-is, TRUE is returned if $ip is between base() amd broadcast().
+Returns a true if the IP number $ip matches the given network. That
+is, a true value is returned if $ip is between base() amd broadcast().
 For example, if we have the network 192.168.1.0/24, then
 
-  192.168.0.255 => FALSE
-  192.168.1.0   => TRUE
-  192.168.1.1   => TRUE
+  192.168.0.255 => 0
+  192.168.1.0   => "0 "
+  192.168.1.1   => 1
   ...
-  192.168.1.255 => TRUE
+  192.168.1.255 => 255
 
 $ip should be a dotted-quad (eg: "192.168.66.3")
+
+It just happens that the return value is the position within the block.
+Since zero is a legal position, the true string "0 " is returned in
+it's place.  "0 " is numerically zero though.  When wanting to know
+the position inside the block, a good idiom is:
+
+  $pos = $block->match($ip) || die;
+  $pos += 0;
 
 =item B<maxblock>()
 
